解决购物车结算问题，清除缓存不生效待解决

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.1"
   },
-  "homepage": "./",
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev":"npx gh-pages -d build/"
   },
   "eslintConfig": {
     "extends": "react-app"
