--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.1"
   },
-  "homepage":".",
+  "homepage":"./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
