--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev":"npx gh-pages -d build/"
+    "gh":"npx gh-pages -d build/"
   },
   "eslintConfig": { 
     "extends": "react-app"
